--- a/paginas/home.phtml
+++ b/paginas/home.phtml
@@ -163,7 +163,7 @@
         <div class="categoria">
             <h2>LANÇAMENTOS</h2>
 
-            <a href>
+            <a href="paginasProdutos/lancamento">
                 <p>Ver Todos</p>
             </a>
 
@@ -295,7 +295,7 @@
         <div class="categoria">
             <h2>EM PROMOÇÃO</h2>
 
-            <a href>
+            <a href="paginasProdutos/promocao">
                 <p>Ver Todos</p>
             </a>
 
@@ -423,7 +423,7 @@
         <div class="categoria">
             <h2>FRETE GRÁTIS</h2>
 
-            <a href>
+            <a href="paginasProdutos/frete">
                 <p>Ver Todos</p>
             </a>
 
