--- a/paginasProdutos/detalheProduto.phtml
+++ b/paginasProdutos/detalheProduto.phtml
@@ -116,7 +116,7 @@
         <div class="categoria">
             <h2>MAIS VENDIDOS</h2>
 
-            <a href>
+            <a href="paginasProdutos/maisvendidos">
                 <p>Ver Todos</p>
             </a>
 
