--- a/paginas/pedidos.phtml
+++ b/paginas/pedidos.phtml
@@ -23,9 +23,9 @@
                     <div class="dropdown-menu">
                         <form action="">
                             <ul>
-                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="parcelas"></li>
-                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="parcelas"></li>
-                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="parcelas"></li>
+                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="estagio"></li>
+                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="estagio"></li>
+                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="estagio"></li>
                             </ul>
                         </form>
                     </div>
@@ -50,9 +50,9 @@
                     <div class="dropdown-menu">
                         <form action="">
                             <ul>
-                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="parcelas"></li>
-                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="parcelas"></li>
-                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="parcelas"></li>
+                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="estagio"></li>
+                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="estagio"></li>
+                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="estagio"></li>
                             </ul>
                         </form>
                     </div>
@@ -77,9 +77,9 @@
                     <div class="dropdown-menu">
                         <form action="">
                             <ul>
-                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="parcelas"></li>
-                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="parcelas"></li>
-                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="parcelas"></li>
+                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="estagio"></li>
+                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="estagio"></li>
+                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="estagio"></li>
                             </ul>
                         </form>
                     </div>
@@ -104,9 +104,9 @@
                     <div class="dropdown-menu">
                         <form action="">
                             <ul>
-                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="parcelas"></li>
-                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="parcelas"></li>
-                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="parcelas"></li>
+                                <li><label for="estagio1">Em Analise</label><input type="checkbox" id="estagio1" name="estagio"></li>
+                                <li><label for="estagio2">Concluido</label><input type="checkbox" id="estagio2" name="estagio"></li>
+                                <li><label for="estagio3">em Espera</label><input type="checkbox" id="estagio3" name="estagio"></li>
                             </ul>
                         </form>
                     </div>
