--- a/paginas/cadastro.phtml
+++ b/paginas/cadastro.phtml
@@ -4,7 +4,7 @@
         <h2>CRIE SUA CONTAR TECNOLO</h2>
 
 
-        <form id="form" action="home" method="post" class="form">
+        <form id="form" action="login" method="post" class="form">
 
                 <input type="email" class="required" name="email" id="email" oninput="emailValidate()" placeholder="E-mail" required>
                 <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">E-mail inválido</span>
@@ -42,8 +42,8 @@
 
     <div class="check">
 
-        <label for="termos"> <input type="checkbox" id="termos" name="termos"> Quero receber ofertas e novidades por e-mail, SMS, WhatsApp.</label>
-        <label for="termos"> <input type="checkbox" id="termos" name="termos"> Li e estou de acordo com as <a href="">políticas da empresa e políticas de privacidade.</a></label>
+        <label for="termos1"> <input type="checkbox" id="termos1" name="termos"> Quero receber ofertas e novidades por e-mail, SMS, WhatsApp.</label>
+        <label for="termos2"> <input type="checkbox" id="termos2" name="termos"> Li e estou de acordo com as <a href="erro">políticas da empresa e políticas de privacidade.</a></label>
 
     </div>
 
