--- a/paginas/redefinirSenha.phtml
+++ b/paginas/redefinirSenha.phtml
@@ -3,10 +3,13 @@
 
         <h2>NOVA SENHA</h2>
 
-        <form action="login" method="post" class="form">
+        <form id="form" action="login" method="post" class="form">
 
-            <input type="password" placeholder="Nova Senha" required>
-            <input type="password" placeholder="Confirmar Nova Senha" style="margin: 20px 0 0 0;" required>
+        <input type="password" name="Number" class="required" oninput="mainPasswordValidateRedefinir()" required id="senha" placeholder="Nova Senha" >
+                <span class="span-required" style=" margin:5px 0 0 10px; display: none; color: red;">Deve ter pelo menos 8 digetos </span>
+
+                    <input type="password" placeholder="Confirme a Nova Senha" name="Number" class="required" oninput="comparePassword()" required id="senha" style="margin-top:20px;">
+                <span class="span-required" style="margin:5px 0 0 10px; display: none; color: red;">Senha senha incorreta</span>
 
             <div class="btn_login">
                 <a id="link" href="esqueciMinhaSenha">Voltar</a>
