--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -170,10 +170,10 @@
                     </div>
                     <div class="modal-body">
                         <form action="">
-                            <input type="" placeholder="Caminho da Imagem">
-                            <input type="number" placeholder="Valor Produto">
-                            <input type="text" placeholder="Categoria">
-                            <textarea name="" id="" placeholder="Descricao do produto"></textarea>
+                            <input type="" placeholder="Caminho da Imagem" required>
+                            <input type="number" placeholder="Valor Produto" required>
+                            <input type="text" placeholder="Categoria" required>
+                            <textarea name="" id="" placeholder="Descricao do produto" required></textarea>
 
                             <div class="p_btn">
                                 <button>Adicionar</button>
